--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cube",
+    "name": "name",
     "description": "Basic ExpressJS",
     "authors": "retry2z",
     "version": "1.0.0",
@@ -15,8 +15,7 @@
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.9.18",
-        "uuid": "^8.1.0"
+        "mongoose": "^5.9.18"
     },
     "devDependencies": {
         "nodemon": "^1.19.2"
